# tcp-chat-pysimplegui

./: README.md  pyproject.toml
src/client/: client.py
src/server/: server.py
